[build-system]
requires = ["setuptools", "setuptools_changelog_shortener", "wheel"]
build-backend = "setuptools.build_meta"


[project]
dynamic = ["version", "readme"]
name = "devpi-server"
description = "devpi-server: reliable, private, and pypi.org caching server"
dependencies = [
    "argon2-cffi",
    "attrs>=22.2.0",
    "defusedxml",
    "devpi_common<5,>3.6.0",
    "httpx",
    "itsdangerous>=0.24",
    "lazy",
    "legacy-cgi;python_version>='3.13'",
    "passlib[argon2]",
    "platformdirs",
    "pluggy>=0.6.0,<2.0",
    "pyramid>=2",
    "repoze.lru>=0.6",
    "sqlalchemy>=2",
    "strictyaml",
    "waitress>=1.0.1",
    'ruamel.yaml',
]
keywords = ["pypi", "realtime", "cache", "server"]
license = {file = "LICENSE"}
maintainers = [
    {name = "Florian Schulze", email = "mail@pyfidelity.com"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Internet :: WWW/HTTP",
]


[project.urls]
"Bug Tracker" = "https://github.com/devpi/devpi/issues"
"Changelog" = "https://github.com/devpi/devpi/blob/main/server/CHANGELOG"
"Documentation" = "https://doc.devpi.net"
"Homepage" = "https://devpi.net"
"Source Code" = "https://github.com/devpi/devpi"


[tool.setuptools]
packages = [
    'devpi_server',
    'devpi_server.cfg',
    'devpi_server.vendor',
    'pytest_devpi_server',
    'test_devpi_server',
]


[project.scripts]
devpi-export = "devpi_server.importexport:export"
devpi-fsck = "devpi_server.fsck:fsck"
devpi-gen-config = "devpi_server.genconfig:genconfig"
devpi-gen-secret = "devpi_server.config:gensecret"
devpi-import = "devpi_server.importexport:import_"
devpi-init = "devpi_server.init:init"
devpi-passwd = "devpi_server.passwd:passwd"
devpi-server = "devpi_server.main:main"


[project.entry-points.devpi_server]
devpi-server-auth-basic = "devpi_server.auth_basic"
devpi-server-auth-devpi = "devpi_server.auth_devpi"
devpi-server-genconfig = "devpi_server.genconfig"
devpi-server-mirror = "devpi_server.mirror"
devpi-server-model = "devpi_server.model"
devpi-server-replica = "devpi_server.replica"
devpi-server-view-auth = "devpi_server.view_auth"
devpi-server-views = "devpi_server.views"
devpi-server-sqla = "devpi_server.keyfs_sqla"
devpi-server-sqla2 = "devpi_server.keyfs_sqla2"
devpi-server-sqlite = "devpi_server.keyfs_sqlite"
devpi-server-sqlite-fs = "devpi_server.keyfs_sqlite_fs"
devpi-server-sqlite2-fs = "devpi_server.keyfs_sqlite2_fs"


[project.entry-points.devpi_web]
devpi-server-replica-status = "devpi_server.replica"
devpi-server-status = "devpi_server.views"


[project.entry-points.pytest11]
pytest_devpi_server = "pytest_devpi_server"


[tool.setuptools.dynamic]
version = {attr = "devpi_server.__version__"}
readme = {file = ["README.rst", "CHANGELOG.short.rst"]}


[tool.setuptools_changelog_shortener]
read_from = "CHANGELOG"
write_to = "CHANGELOG.short.rst"
count = 5
delimiter = "^==+"
title = "=========\nChangelog\n========="


[tool.towncrier]
package = "devpi_server"
filename = "CHANGELOG"
directory = "news/"
title_format = "{version} ({project_date})"
template = "news/_template.rst"

  [[tool.towncrier.type]]
  directory = "removal"
  name = "Deprecations and Removals"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "feature"
  name = "Features"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "bugfix"
  name = "Bug Fixes"
  showcontent = true

  [[tool.towncrier.type]]
  directory = "other"
  name = "Other Changes"
  showcontent = true
